--- a/css/index.css
+++ b/css/index.css
@@ -5,9 +5,11 @@
 
 input {
   border: none;
-  outline: none
+  outline: none;
 }
-
+i{
+font-style: normal;
+}
 body {
   background: url(../img/bg.jpg) repeat;
   color: aliceblue;
@@ -110,4 +112,60 @@ li {
 
 .current {
   color: red;
+}
+.sidebar{
+  display: inline-block;
+  width: 24%;
+  border: 1px solid red;
+  height: 95vh;
+  vertical-align: top;
+}
+.sidebar li {
+  text-align: center;
+  line-height: 5vh;
+}
+.catalog .current{
+  background-color: gray;
+  border-left: 3px solid red;
+}
+.content{
+  display: inline-block;
+  width: 75%;
+  border: 1px solid red;
+  height: 95vh;
+  vertical-align: top;
+}
+.content_header{
+  height: 10vh;
+  border: 1px solid red;
+}
+.content_body{
+  height: 85vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+.nowInterface{
+  display: flex;
+  padding-top: 40px;
+}
+.nowInterface li{
+  width: 10%;
+  text-align: center;
+  position: relative;
+  border: 1px solid pink;
+}
+.nowInterface li i{
+  font-size: 5px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.nowInterface .current{
+  border-top: 3px solid yellow;
+}
+.newInterface{
+  margin-left: 10px;
+  text-align: center;
+  width: 3%;
+  border: 1px solid red;
 }
